--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,5 +1,5 @@
-<ion-view view-title="Bio-Tech">
-  <ion-content class="padding">
+<ion-view class="fondow" view-title="Bio-Tech">
+  <ion-content class="padding fondow">
     <video autoplay controls src =""></video>
   </ion-content>
 </ion-view>
