--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,5 +1,7 @@
 <ion-view class="fondow" view-title="Bio-Tech">
   <ion-content class="padding fondow">
-    <video autoplay controls src =""></video>
+  	<div class="row">
+  		<div class="col borde"><video autoplay controls src ="../video/Agua.mp4"></video></div>	
+  	</div>
   </ion-content>
 </ion-view>
