--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,7 +1,11 @@
 <ion-view class="fondow" view-title="Bio-Tech">
   <ion-content class="padding fondow">
   	<div class="row">
-  		<div class="col borde"><video autoplay controls src ="../video/sinmenciones.mp4" height="400" width="400"></video></div>	
+  		<div class="col borde"><video autoplay controls src ="../video/sinmenciones.mp4" height="350" width="350"></video>
+  			<div class="col"><h1>la importancia del agua</h1></div>
+  		</div>
   	</div>
+  	
+
   </ion-content>
 </ion-view>
