--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,9 +1,11 @@
 <ion-view class="fondow" view-title="Bio-Tech">
   <ion-content class="padding fondow">
-  	<div class="row">
-  		<div class="col borde"><video autoplay controls src ="../video/sinmenciones.mp4" height="350" width="350"></video>
-  			<div class="col"><h1>la importancia del agua</h1></div>
+  		<div class="row">
+  			<div class="col borde centrado"><video autoplay controls src ="../video/sinmenciones.mp4" height="350" width="350"></video>
+  			</div>
   		</div>
+  	<div class="row">
+  		<div class="col centrado letra"><h1 class="letra">La Importancia del Agua</h1></div>
   	</div>
   	
 
