--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -7,6 +7,10 @@
   	<div class="row">
   		<div class="col centrado letra"><h1 class="letra">La Importancia del Agua</h1></div>
   	</div>
+    <p>El agua es un elemento muy importante para los seres vivos ya que sin ellos la vida sobre la tierra acabaria en todo caso es nuestro deber como seres superiores darle importancia al agua </p>
+      <div class="row">
+      
+      </div>
   	
 
   </ion-content>
