--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -7,7 +7,7 @@
   	<div class="row">
   		<div class="col centrado letra"><h1 class="letra">La Importancia del Agua</h1></div>
   	</div>
-    <p>El agua es un elemento muy importante para los seres vivos ya que sin ellos la vida sobre la tierra acabaria en todo caso es nuestro deber como seres superiores darle importancia al agua </p>
+    <p class="tipol centrado">El agua es un elemento muy importante para los seres vivos ya que sin ello la vida sobre la tierra acabaria en todo caso es nuestro deber como seres superiores e "iInteligentes" darle importancia al agua ya que somos nosotros quienes hemos acabado con este recurso es primordial darle un uso adecuado a que tan solo el 1% de agua es apta para consumo humano y por eso con mas razon hay que cuidarlo   </p>
       <div class="row">
       
       </div>
