--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,11 +1,6 @@
-<ion-view view-title="Account">
+<ion-view  view-title="ADN">
   <ion-content>
-    <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-    </ion-toggle>
-    </ion-list>
-
-    
+    <p>ADN</p>
+<canvas></canvas>
   </ion-content>
 </ion-view>
