--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -5,13 +5,100 @@
   			</div>
   		</div>
   	<div class="row">
-  		<div class="col centrado letra"><h1 class="letra">La Importancia del Agua</h1></div>
+  		<div class="col centrado letrag"><h1 class="letra">La Importancia del Agua</h1></div>
   	</div>
     <p class="tipol centrado">El agua es un elemento muy importante para los seres vivos ya que sin ello la vida sobre la tierra acabaria en todo caso es nuestro deber como seres superiores e "iInteligentes" darle importancia al agua ya que somos nosotros quienes hemos acabado con este recurso es primordial darle un uso adecuado a que tan solo el 1% de agua es apta para consumo humano y por eso con mas razon hay que cuidarlo   </p>
-      <div class="row">
-      
-      </div>
-  	
+    <br>
+      <h1 class="letra1 bordef">Tabla Nutricional Para Los Jovenes</h1>
+    <table>
+    <thead class="letra">
+    <tr>
+      <th class="centrado">Alimentos</th>
+      <th class="centrado">Azucar</th>
+      <th class="centrado">Carbohidratos</th>
+      <th class="centrado">Calorias</th>
+      <th class="centrado">Proteinas</th>
+      <th class="centrado">Cantidad por 100g</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr class="letra3">
+      <td class="centrado">Agua</td>
+      <td class="centrado">0g</td>
+      <td class="centrado">0g</td>
+      <td class="centrado">0g</td>
+      <td class="centrado">0g</td>
+      <td class="centrado">Cantidad por 100g</td>
+    </tr>
+    <tr class="letra3">
+      <td class="centrado">Carnes</td>
+      <td class="centrado">0g</td>
+      <td class="centrado">0g</td>
+      <td class="centrado">143</td>
+      <td class="centrado">26g</td>
+      <td class="centrado">Cantidad por 100g</td>
+    </tr>
+    <tr class="letra3">
+      <td class="centrado">Frutas</td>
+      <td class="centrado">0.7g</td>
+      <td class="centrado">9g</td>
+      <td class="centrado">160</td>
+      <td class="centrado">2g</td>
+      <td class="centrado">Cantidad por 100g</td>
+    </tr>
+    <tr class="letra3">
+      <td class="centrado">Verduras</td>
+      <td class="centrado">3.1g</td>
+      <td class="centrado">13g</td>
+      <td class="centrado">65</td>
+      <td class="centrado">2.9g</td>
+      <td class="centrado">Cantidad por 100g</td>
+    </tr>
+    <tr class="letra3">
+      <td class="centrado">Legubres</td>
+      <td class="centrado">6g</td>
+      <td class="centrado">14g</td>
+      <td class="centrado">81</td>
+      <td class="centrado">5g</td>
+      <td class="centrado">Cantidad por 100g</td>
+    </tr>
+    <tr class="letra3">
+      <td class="centrado">Lacteos</td>
+      <td class="centrado">5g</td>
+      <td class="centrado">5g</td>
+      <td class="centrado">46</td>
+      <td class="centrado">1.6g</td>
+      <td class="centrado">Cantidad por 100g</td>
+    </tr>
+    </tbody>
+  </table>
+  <br>
+  <div class="row">
+    <div class="col lugar letra"><h1 class="bordef">Para qué sirve una tabla Nutricional.</h1>
+      <p class="lugar letra1">Los alimentos que consumimos nos aportan todos los nutrientes esenciales que nuestro cuerpo necesita para funcionar. Para saber con exactitud las cantidades de vitaminas, hidratos de carbono, minerales, fibras, proteínas y las calorías que cada alimento nos provee contamos con la tabla nutrimental.</p></div>
+  </div>
+  <div class="container2">
+    <div class="row">
+      <div class="col letra4 centrado borde2">Nombres De Los Creadores</div>
+      <div class="col letra4 centrado borde2">Apoyos De Creacion</div>
+    </div>
+    <div class="row">
+      <div class="col letra4 centrado borde2">Andre Osorio</div>
+      <div class="col letra4 centrado borde2">Ionic</div>
+    </div>
+    <div class="row">
+      <div class="col letra4 centrado borde2">Daniel Cruz</div>
+      <div class="col letra4 centrado borde2">Ionic-Icons</div> 
+    </div>
+    <div class="row">
+      <div class="col letra4 centrado borde2">Andy Xicon</div>
+      <div class="col letra4 centrado borde2">Styles</div>
+    </div>
+    <div class="row">
+      <div class="col letra4 centrado borde2">Walter Gabriel</div>
+      <div class="col letra4 centrado borde2">Angular.js</div>
+    </div>
+  </div>
 
   </ion-content>
 </ion-view>
